# TEL211_2023

./: README.md
assignment_1_snippets/: 01_vars_and_args.sh  02_if_and_user_input.sh  03_for.sh  04_while_and_maths.sh  05_functions.sh  06_tar_and_compress.sh  07_apt.sh  08_git.sh  README.md
assignment_2_snippets/: README.md
assignment_2_snippets/talker_listener_pkg/: CMakeLists.txt  package.xml
assignment_2_snippets/talker_listener_pkg/launch/: start_nodes.launch
assignment_2_snippets/talker_listener_pkg/src/: listener.py  talker.py
assignment_2_snippets/thorvald_launcher_pkg/: CMakeLists.txt  package.xml
assignment_2_snippets/thorvald_launcher_pkg/launch/: start_thorvald_simulation_boring.launch  start_thorvald_simulation_shapes.launch
assignment_2_snippets/thorvald_odom_sub_pkg/: CMakeLists.txt  package.xml
assignment_2_snippets/thorvald_odom_sub_pkg/launch/: start_odom_sub.launch
assignment_2_snippets/thorvald_odom_sub_pkg/src/: odom_subscriber.py
assignment_3_snippets/: README.md
assignment_3_snippets/service_server_client_pkg/: CMakeLists.txt  package.xml
assignment_3_snippets/service_server_client_pkg/launch/: start_nodes.launch
assignment_3_snippets/service_server_client_pkg/params/: config.yaml
assignment_3_snippets/service_server_client_pkg/src/: list_folders_client.py  list_folders_server.py
assignment_3_snippets/service_server_client_pkg/srv/: ListFolders.srv
assignment_3_snippets/text_to_speech/: text_to_speech.py
code_from_lectures/20220301_catkin_and_custom_msgs/example_cpp_python/: CMakeLists.txt  package.xml
code_from_lectures/20220301_catkin_and_custom_msgs/example_cpp_python/nodes/: listener  talker
code_from_lectures/20220301_catkin_and_custom_msgs/example_cpp_python/src/: cpp_talker.cpp
code_from_lectures/20220315_logging/log_examples/: CMakeLists.txt  package.xml
code_from_lectures/20220315_logging/log_examples/nodes/: log_examples
code_from_lectures/exarm_packages/exarm_control/: CMakeLists.txt  package.xml
code_from_lectures/exarm_packages/exarm_control/config/: control.yaml
code_from_lectures/exarm_packages/exarm_control/launch/: virtual_gamepad_arm_control.launch
code_from_lectures/exarm_packages/exarm_control/nodes/: arm_teleop
code_from_lectures/exarm_packages/exarm_description/: CMakeLists.txt  package.xml
code_from_lectures/exarm_packages/exarm_description/launch/: robot_viz.launch  robot_xacro_viz.launch
code_from_lectures/exarm_packages/exarm_description/scripts/: inertia_calculator_python3.py
code_from_lectures/exarm_packages/exarm_description/urdf/: robot_description.urdf  robot_description.urdf.xacro  robot_description_gazebo.urdf.xacro  robot_description_gazebo_no_control.urdf.xacro
code_from_lectures/exarm_packages/exarm_gazebo/: CMakeLists.txt  package.xml
code_from_lectures/exarm_packages/exarm_gazebo/launch/: robot_xacro_gazebo.launch  robot_xacro_gazebo_no_control.launch
code_from_lectures/turtle_tf_examples/: CMakeLists.txt  package.xml
code_from_lectures/turtle_tf_examples/launch/: broadcast_tf.launch  turtle_buddies.launch
code_from_lectures/turtle_tf_examples/nodes/: turtle_tf_broadcaster  turtle_tf_listener
demo_packages/: CMakeLists.txt  package.xml
demo_packages/thorvald_command/: command_publisher.py
demo_packages/velodyne_simulator/: pcl2_subscriber.py
demo_packages/velodyne_simulator/launch/: vl16_example.launch
demo_packages/velodyne_simulator/urdf/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro  example.urdf.xacro
scripts/: linux_basics_script_0.py  mail_example.sh  setup_computer_tel211.sh
