<?xml version="1.0"?>
<package>
  <name>demo_packages</name>
  <version>0.0.0</version>
  <description>
   todo
  </description>
  <maintainer email="fetullah.atas@nmbu.no">Fetullah Atas</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/</url>
  <url type="bugtracker">https://github.com/ros/ros_tutorials/issues</url>
  <url type="repository">https://github.com/ros/ros_tutorials</url>

  <author email="fetullah.atas@nmbu.no">Fetullah Atas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_runtime</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ros_numpy</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>ros_numpy</run_depend>

</package>