<?xml version="1.0"?>
<package format="2">
  <name>example_cpp_python</name>
  <version>0.0.0</version>
  <description>A package for demonstrating cusom messages</description>

  <maintainer email="lars.grimstad@nmbu.no">Lars Grimstad</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
  </export>
</package>
